--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Datok</string>
-    <string name="need_a_new_account">회원가입이 필요하신가요?</string>
+    <string name="need_a_new_account">회원가입</string>
     <string name="display_name">Display Name</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
